English Dolibarr ChangeLog

***** ChangeLog for 3.0 compared to 2.9 *****

For users:
- New: Can generate business card for on particular member.
- New: Task #10553 : Can attach files on members card.
- New: Can filter on payment type and bank account in payment lists.
- New: When sending supplier orders by mail, a text is predefined.
- New: Upgrade process works with Postgresql.
- New: Task #10538: Add filter on expiration date of subscription for
       foundation module email selector.
- New: Task #9643: Add 2 status (tosell/tobuy) on products instead of only
       1 status for both selling and buying.       
- New: Can input payment conditions on several lines.
- New: Add hidden option MAIN_LOGOUT_GOTO_URL to set the exit url after
       a logout.
- New: For germany, we invert order of address.
- New: Add hidden option MAIN_SERVICES_ARE_ECOMMERCE_200238EC.
- New: Support NPR in customer product prices.
- New: Add more volume units (ounce, gallon, inch, feet, ...)
- New: Delivery date accepts hours and minutes.
- New: Can add a comment on stock dispatching to be save into stock movements.
- New: Add option to send all emails sent to a bulk carbon copy.
- New: Preview of emails sent by member module is shown.
- New: task #10100 : Add button to create invoice from a subscription
- Perf: Avoid reading database to determine country code after each
        page call.
- Fix: Better Postgresql compatibility.
- Fix: Box order is saved when moved.
- Fix: Database name can contains "-" characters.
- Fix: In coloring negative amounts.
- Fix: Date input use date format of user and not dd/mm/yyyy format.

For translators:
- New: Update and complete slovenian language sl_SL.

For developers:
- New: Add jquery by default.
- New: Removed PWC libraries.
- New: Removed Scriptaculous libraries.
- New: Add first Selenium GUI tests.
- New: Enhance a lot of internal function to build external modules
       more easily.
- Qual: Mutualize some duplicate code.