@@ -792,6 +792,7 @@ SimpleNumRefModelDesc=Renvoie le numéro sous la forme %syymm-nnnn où yy est l'
 ListOfEntities=Liste des entités
 AddEntity=Ajouter entité
 EditEntity=Editer entité
+ShowProfIdInAddress=Afficher l'identifiant professionnel dans les adresses sur les documents
 
 ##### Module password generation= undefined
 PasswordGenerationStandard= Renvoie un mot de passe généré selon algorithme interne Dolibarr: 8 caractères, chiffres et caractères en minuscules mélangés.
